[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openradiophy"
version = "0.1.0"
description = "A modular Python physical-layer platform for simulation and point-to-point OTA experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "OpenRadioPHY contributors"}]
dependencies = [
  "numpy>=1.23",
  "Pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["d2d_local*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
